Bug 150713 - REGRESSION(r191776): EFL build broken.
Summary: REGRESSION(r191776): EFL build broken.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit EFL (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hunseop Jeong
URL:
Keywords:
Depends on:
Blocks: 150695
  Show dependency treegraph
 
Reported: 2015-10-29 23:03 PDT by Hunseop Jeong
Modified: 2015-10-30 06:17 PDT (History)
8 users (show)

See Also:


Attachments
Patch (1.26 KB, patch)
2015-10-29 23:09 PDT, Hunseop Jeong
no flags Details | Formatted Diff | Diff
Patch (1.31 KB, patch)
2015-10-30 00:12 PDT, Hunseop Jeong
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hunseop Jeong 2015-10-29 23:03:52 PDT
../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp: In member function ‘void WebCore::IDBServer::UniqueIDBDatabase::performPutOrAdd(uint64_t, const WebCore::IDBResourceIdentifier&, uint64_t, const WebCore::IDBKeyData&, const WebCore::ThreadSafeDataBuffer&, WebCore::IndexedDB::ObjectStoreOverwriteMode)’:
../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:316:10: error: variable ‘keyWasGenerated’ set but not used [-Werror=unused-but-set-variable]
     bool keyWasGenerated = false;
          ^
Comment 1 Hunseop Jeong 2015-10-29 23:09:43 PDT
Created attachment 264382 [details]
Patch
Comment 2 Hunseop Jeong 2015-10-29 23:10:10 PDT
EFL build failed because 'keyWasGenerated' was unused.
Do you have additional patch to use the 'keyWasGenerated'?
Comment 3 Alex Christensen 2015-10-30 00:09:12 PDT
Comment on attachment 264382 [details]
Patch

Just remove keyWasGenerated completely.  It is indeed not used, and if we need to use it, we will add it. rs=me for doing that.
Comment 4 Hunseop Jeong 2015-10-30 00:12:23 PDT
Created attachment 264384 [details]
Patch
Comment 5 Hunseop Jeong 2015-10-30 00:13:03 PDT
(In reply to comment #3)
> Comment on attachment 264382 [details]
> Patch
> 
> Just remove keyWasGenerated completely.  It is indeed not used, and if we
> need to use it, we will add it. rs=me for doing that.

Okay, I removed it.
Comment 6 WebKit Commit Bot 2015-10-30 01:02:06 PDT
Comment on attachment 264384 [details]
Patch

Clearing flags on attachment: 264384

Committed r191781: <http://trac.webkit.org/changeset/191781>
Comment 7 WebKit Commit Bot 2015-10-30 01:02:10 PDT
All reviewed patches have been landed.  Closing bug.
Comment 8 Brady Eidson 2015-10-30 06:17:31 PDT
Sorry, didn't see this because the EFL bot was in the "build broken even without this patch" state