REGRESSION(r191776): EFL build broken. https://bugs.webkit.org/show_bug.cgi?id=150713

Reviewed by Csaba Osztrogonác.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performPutOrAdd):


Canonical link: https://commits.webkit.org/168881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191781 268f45cc-cd09-0410-ab3c-d52691b4dbfc